Animation d'ouverture et fermeture de film list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>JustStreamIt</title>
     <link href="./css/normalize.css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" media="screen and (min-width: 668px)" href="./css/style_pad.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
